--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <nav class="right-nav">
                 <ul style="display: flex; align-items: center;">
                     <a href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(85%);" src="public/linkedin.svg">
+                        <img style="height: 1rem; filter: invert(85%);" src="public/images/linkedin.svg">
                     </a>
                     <a href="#" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(95%);" src="public/github.svg">
+                        <img style="height: 1rem; filter: invert(95%);" src="public/images/github.svg">
                     </a>
                     <a style="color: gainsboro;">&copy 2024 All Rights Reserved.</a>
                 </ul>
@@ -138,10 +138,10 @@
             <nav class="right-nav">
                 <ul style="display: flex; align-items: center;">
                     <a href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(85%);" src="public/linkedin.svg">
+                        <img style="height: 1rem; filter: invert(85%);" src="public/images/linkedin.svg">
                     </a>
                     <a href="#" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(95%);" src="public/github.svg">
+                        <img style="height: 1rem; filter: invert(95%);" src="public/images/github.svg">
                     </a>
                     <a style="color: gainsboro;">&copy 2024 All Rights Reserved.</a>
                 </ul>
