minor changes in css

--- a/index.html
+++ b/index.html
@@ -44,29 +44,30 @@
             </nav>
 
             <div style="display: block; align-items: center;">
-            <div>
+
+            <div class="margin-one">
                 <h3 style="font-weight: bold;">Hi! I'm Anna.</h3>
             </div>
 
-            <div class="mt-2">
+            <div class="mt-2 margin-one">
                 <p>I am a graduate student at Cornell University, pursuing a degree in Information Science. <br>
                 Seeking Front-End and Software Developer opportunities for 2024.</p>
             </div>
 
-            <div class="mt-2">
+            <div class="mt-2 margin-one">
                 <p>View my resume <a href="#" style="font-size: 12px; font-weight: bold;">here</a>.</p>
             </div>
             </div>
 
             <nav class="right-nav">
                 <ul style="display: flex; align-items: center;">
-                    <a href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(85%);" src="public/images/linkedin.svg">
+                    <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
+                        <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
                     </a>
-                    <a href="#" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(95%);" src="public/images/github.svg">
+                    <a class="no-dec" href="https://github.com/annaw-99" target="_blank" style="margin-right: 10px;">
+                        <img style="height: 1rem; filter: invert(85%);" src="public/images/github.svg">
                     </a>
-                    <a style="color: gainsboro;">&copy 2024 All Rights Reserved.</a>
+                    <a class="no-dec" style="color: rgb(198, 198, 198);">&copy 2024 All Rights Reserved.</a>
                 </ul>
             </nav>
 
@@ -108,7 +109,7 @@
                     <div class="sec">
                         <p style="font-size: 8px;">a personal website.</p>
                         <p style="font-weight:bold; font-size: 10px;">HTML&nbsp;CSS&nbsp;JS</p>
-                        <a href="#" style="font-size: 8px;">Link to GitHub</a>
+                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">Link to GitHub</a>
                     </div>
                 </div>
 
@@ -137,13 +138,13 @@
 
             <nav class="right-nav">
                 <ul style="display: flex; align-items: center;">
-                    <a href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(85%);" src="public/images/linkedin.svg">
+                    <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
+                        <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
                     </a>
-                    <a href="#" style="margin-right: 10px;">
-                        <img style="height: 1rem; filter: invert(95%);" src="public/images/github.svg">
+                    <a class="no-dec" href="https://github.com/annaw-99" target="_blank" style="margin-right: 10px;">
+                        <img style="height: 1rem; filter: invert(85%);" src="public/images/github.svg">
                     </a>
-                    <a style="color: gainsboro;">&copy 2024 All Rights Reserved.</a>
+                    <a class="no-dec" style="color: rgb(198, 198, 198);">&copy 2024 All Rights Reserved.</a>
                 </ul>
             </nav>
             
