--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-        <div class="top">
+        <div class="top margin-two">
             <a href="#projects">/&nbsp;my-projects</a>
         </div>
 
@@ -28,7 +28,7 @@
             <h6>/&nbsp;to-be-updated</h6>
         </div>
 
-        <div class="bottom">
+        <div class="bottom margin-two">
             <h6>&copy 2024 All Rights Reserved.</h6>
         </div>
     </div>
