--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             </div>
 
-            <nav class="right-nav">
+            <nav class="right-nav margin-two">
                 <ul style="display: flex; align-items: center;">
                     <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
                         <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
@@ -136,7 +136,7 @@
 
             </div>
 
-            <nav class="right-nav">
+            <nav class="right-nav margin-two">
                 <ul style="display: flex; align-items: center;">
                     <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
                         <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
