--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST</title>
+    <title>annaw.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -59,7 +59,7 @@
             </div>
             </div>
 
-            <nav class="right-nav margin-two">
+            <nav class="bottom-nav margin-two hide">
                 <ul style="display: flex; align-items: center;">
                     <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
                         <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
@@ -75,7 +75,7 @@
     </div>
 
     <div class="container">
-        <section id="projects">
+        <section id="projects" class="cus-section">
             <nav class="left-nav">
                 <ul>
                     <a href="#" style="margin-right: 10px;">/ home</a>
@@ -136,7 +136,7 @@
 
             </div>
 
-            <nav class="right-nav margin-two">
+            <nav class="bottom-nav margin-two">
                 <ul style="display: flex; align-items: center;">
                     <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
                         <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
