--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div class="middle">
             <h1 class="enter" style="font-weight: bold;">
             H&nbsp;&nbsp;&nbsp;E&nbsp;&nbsp;&nbsp;L&nbsp;&nbsp;&nbsp;L&nbsp;&nbsp;&nbsp;O&nbsp;&nbsp;&nbsp;
+            </h1>
+            <h1 class="enter" style="font-weight: bold;">
             T&nbsp;&nbsp;&nbsp;H&nbsp;&nbsp;&nbsp;E&nbsp;&nbsp;&nbsp;R&nbsp;&nbsp;&nbsp;E
             </h1>
         </div>
@@ -42,20 +44,19 @@
                     <a href="#projects" style="margin-right: 10px;">/ my-projects</a>
                 </ul>
             </nav>
-
+            
             <div style="display: block; align-items: center;">
-
             <div class="margin-one">
-                <h3 style="font-weight: bold;">Hi! I'm Anna.</h3>
+                <h3 class="enter" style="font-weight: bold;">Hi! I'm Anna.</h3>
             </div>
 
             <div class="mt-2 margin-one">
-                <p>I am a graduate student at Cornell University, pursuing a degree in Information Science. <br>
+                <p class="right-enter">I am a graduate student at Cornell University, pursuing a degree in Information Science. <br>
                 Seeking Front-End and Software Developer opportunities for 2024.</p>
             </div>
 
             <div class="mt-2 margin-one">
-                <p>View my resume <a href="#" style="font-size: 12px; font-weight: bold;">here</a>.</p>
+                <p class="enter">View my resume <a href="#" style="font-size: 12px; font-weight: bold;">here</a>.</p>
             </div>
             </div>
 
@@ -151,6 +152,7 @@
         </section>
     </div>
 
+    <script src="srcipt.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
