--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container">
-        <section id="projects" class="cus-section">
+        <section id="projects">
             <nav class="left-nav">
                 <ul>
                     <a href="#" style="margin-right: 10px;">/ home</a>
@@ -84,6 +84,10 @@
                     <a href="#projects" style="text-decoration: underline; margin-right: 10px;">/ my-projects</a>
                 </ul>
             </nav>
+
+            <div style="display: block;">
+            
+            <p class="mb-3">Little projects I made. Scroll down to view more.</p>
             
             <div class="pt-3 scroll">
                 <div class="mb-3 f-box box">
@@ -135,6 +139,7 @@
                 </div>
 
 
+            </div>
             </div>
 
             <nav class="bottom-nav margin-two">
