--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="right">
-            <h6>/&nbsp;to-be-updated</h6>
+            <h6 class="mb-0">/&nbsp;to-be-updated</h6>
         </div>
 
         <div class="bottom margin-two">
@@ -87,10 +87,13 @@
 
             <div style="display: block;">
             
-            <p class="mb-3">Little projects I made. Scroll down to view more.</p>
+            <div class="mb-1 display-b">
+                <p>Little projects I made.&nbsp;</p>
+                <p>Scroll down to view more.</p>
+            </div>
             
             <div class="pt-3 scroll">
-                <div class="mb-3 f-box box">
+                <div class="mt-3 f-box box">
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
@@ -104,7 +107,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 box">
+                <div class="box">
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
@@ -118,7 +121,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 box">
+                <div class="box">
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
@@ -132,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 box">
+                <div class="box">
                     <h1 style="font-weight: bold; font-size: 20px; color: rgb(230, 230, 230)">
                         T&nbsp;O&nbsp;&nbsp;B&nbsp;E&nbsp;&nbsp;U&nbsp;P&nbsp;D&nbsp;A&nbsp;T&nbsp;E&nbsp;D
                     </h1>    
