modified github links

--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
                         </h1>
                     </div>
                     <div class="sec">
-                        <p style="font-size: 8px;">a simple calculator.</p>
-                        <p style="font-weight:bold; font-size: 10px;">HTML&nbsp;CSS&nbsp;JS&nbsp;Vue.JS</p>
-                        <a href="#" style="font-size: 8px;">Link to GitHub</a>
+                        <p style="font-size: 8px;">a simple web calculator.</p>
+                        <p class="hide" style="font-size: 8px;"><a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
+                        HTML&nbsp;CSS&nbsp;JS&nbsp;Vue.JS</p>
+                        <a href="#" style="font-size: 8px;">view github</a>
                     </div>
                 </div>
 
@@ -116,8 +117,10 @@
                     </div>
                     <div class="sec">
                         <p style="font-size: 8px;">a personal website.</p>
-                        <p style="font-weight:bold; font-size: 10px;">HTML&nbsp;CSS&nbsp;JS</p>
-                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">Link to GitHub</a>
+                        <p class="hide" style="font-size: 8px;">
+                            <a href="annaw-99.github.io/web/" style="font-size: 8px;">view website</a>
+                            &nbsp;| HTML&nbsp;CSS&nbsp;JS</p>
+                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">view github</a>
                     </div>
                 </div>
 
@@ -130,8 +133,9 @@
                     </div>
                     <div class="sec">
                         <p style="font-size: 8px;">a data analysis platform.</p>
-                        <p style="font-weight:bold; font-size: 10px;">HTML&nbsp;CSS&nbsp;JS</p>
-                        <a href="#" style="font-size: 8px;">Link to GitHub</a>
+                        <p class="hide" style="font-size: 8px;"><a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
+                            HTML&nbsp;CSS&nbsp;JS</p>
+                        <a href="#" style="font-size: 8px;">view github</a>
                     </div>
                 </div>
 
