modified scrolling prop

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="scroller">
     <div class="container">
+        <section id="home">
         <div class="top margin-two">
             <a href="#projects">/&nbsp;my-projects</a>
         </div>
@@ -33,13 +35,14 @@
         <div class="bottom margin-two">
             <h6>&copy 2024 All Rights Reserved.</h6>
         </div>
+        </section>
     </div>
 
     <div class="container">
         <section id="about-me">
             <nav class="left-nav">
                 <ul>
-                    <a href="#" style="margin-right: 10px;">/ home</a>
+                    <a href="#home" style="margin-right: 10px;">/ home</a>
                     <a href="#about-me" style="text-decoration: underline; margin-right: 10px;">/ about-me</a>
                     <a href="#projects" style="margin-right: 10px;">/ my-projects</a>
                 </ul>
@@ -47,11 +50,11 @@
             
             <div style="display: block; align-items: center;">
             <div class="margin-one">
-                <h3 class="enter" style="font-weight: bold;">Hi! I'm Anna.</h3>
+                <h3 class="enter" style="font-weight: bold;">Hi! I'm Anna :)</h3>
             </div>
 
             <div class="mt-2 margin-one">
-                <p class="right-enter">I am a graduate student at Cornell University, pursuing a degree in Information Science. <br>
+                <p class="right-enter">Graduate student at Cornell University, pursuing a degree in Information Science. <br>
                 Seeking Front-End and Software Developer opportunities for 2024.</p>
             </div>
 
@@ -79,7 +82,7 @@
         <section id="projects">
             <nav class="left-nav">
                 <ul>
-                    <a href="#" style="margin-right: 10px;">/ home</a>
+                    <a href="#home" style="margin-right: 10px;">/ home</a>
                     <a href="#about-me" style="margin-right: 10px;">/ about-me</a>
                     <a href="#projects" style="text-decoration: underline; margin-right: 10px;">/ my-projects</a>
                 </ul>
@@ -162,6 +165,7 @@
             </nav>
             
         </section>
+    </div>
     </div>
 
     <script src="srcipt.js"></script>
