--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
                     </div>
                     <div class="sec">
                         <p style="font-size: 8px;">a simple web calculator.</p>
-                        <p class="hide" style="font-size: 8px;"><a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
+                        <p class="hide" style="font-size: 8px;">
+                            <a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
                         HTML&nbsp;CSS&nbsp;JS&nbsp;Vue.JS</p>
-                        <a href="#" style="font-size: 8px;">view github</a>
+                        <a href="https://github.com/annaw-99/web-calculator" target="_blank" style="font-size: 8px;">view github</a>
                     </div>
                 </div>
 
@@ -122,8 +123,24 @@
                         <p style="font-size: 8px;">a personal website.</p>
                         <p class="hide" style="font-size: 8px;">
                             <a href="annaw-99.github.io/web/" style="font-size: 8px;">view website</a>
-                            &nbsp;| HTML&nbsp;CSS&nbsp;JS</p>
+                            &nbsp;| HTML&nbsp;CSS</p>
                         <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">view github</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="first">
+                        <p>THE</p>
+                        <h1 style="font-weight: bold;">
+                            &nbsp;&nbsp;&nbsp;T&nbsp;O-D&nbsp;O&nbsp;&nbsp;L&nbsp;I&nbsp;S&nbsp;T
+                        </h1>
+                    </div>
+                    <div class="sec">
+                        <p style="font-size: 8px;">a simple web to-do list.</p>
+                        <p class="hide" style="font-size: 8px;">
+                            <a href="http://to-do-list-annaw-99s-projects.vercel.app/" target="_blank" style="font-size: 8px;">view web app</a>&nbsp;| 
+                            HTML&nbsp;CSS&nbsp;JS&nbsp;Next.JS&nbsp;Vercel</p>
+                        <a href="https://github.com/annaw-99/to-do-list" target="_blank" style="font-size: 8px;">view github</a>
                     </div>
                 </div>
 
@@ -136,9 +153,10 @@
                     </div>
                     <div class="sec">
                         <p style="font-size: 8px;">a data analysis platform.</p>
-                        <p class="hide" style="font-size: 8px;"><a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
+                        <p class="hide" style="font-size: 8px;">
+                            <a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
                             HTML&nbsp;CSS&nbsp;JS</p>
-                        <a href="#" style="font-size: 8px;">view github</a>
+                        <a href="#" style="font-size: 8px;">view github (disabled)</a>
                     </div>
                 </div>
 
