modified web link

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="sec">
                         <p style="font-size: 8px;">a simple web to-do list.</p>
                         <p class="hide" style="font-size: 8px;">
-                            <a href="http://to-do-list-annaw-99s-projects.vercel.app/" target="_blank" style="font-size: 8px;">view web app</a>&nbsp;| 
+                            <a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
                             HTML&nbsp;CSS&nbsp;JS&nbsp;Next.JS&nbsp;Vercel</p>
                         <a href="https://github.com/annaw-99/to-do-list" target="_blank" style="font-size: 8px;">view github</a>
                     </div>
