updated new project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             
             <div style="display: block; align-items: center;">
             <div class="margin-one">
-                <h3 class="enter" style="font-weight: bold;">Hi! I'm Anna :)</h3>
+                <h3 class="enter" style="font-weight: bold;">Hi! I'm Tung-Yen (Anna) :)</h3>
             </div>
 
             <div class="mt-2 margin-one">
@@ -100,6 +100,22 @@
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
+                            &nbsp;&nbsp;&nbsp;W&nbsp;E&nbsp;B
+                        </h1>
+                    </div>
+                    <div class="sec">
+                        <p style="font-size: 8px;">a (this) personal website.</p>
+                        <p class="hide" style="font-size: 8px;">
+                            <a href="#home" style="font-size: 8px;">view website</a>
+                            &nbsp;| HTML&nbsp;CSS</p>
+                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">view github</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="first">
+                        <p>THE</p>
+                        <h1 style="font-weight: bold;">
                             &nbsp;&nbsp;&nbsp;C&nbsp;A&nbsp;L&nbsp;C&nbsp;U&nbsp;L&nbsp;A&nbsp;T&nbsp;O&nbsp;R
                         </h1>
                     </div>
@@ -116,15 +132,15 @@
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
-                            &nbsp;&nbsp;&nbsp;W&nbsp;E&nbsp;B
+                            &nbsp;&nbsp;&nbsp;T&nbsp;O-D&nbsp;O&nbsp;&nbsp;L&nbsp;I&nbsp;S&nbsp;T
                         </h1>
                     </div>
                     <div class="sec">
-                        <p style="font-size: 8px;">a personal website.</p>
+                        <p style="font-size: 8px;">a simple web to-do list.</p>
                         <p class="hide" style="font-size: 8px;">
-                            <a href="annaw-99.github.io/web/" style="font-size: 8px;">view website</a>
-                            &nbsp;| HTML&nbsp;CSS</p>
-                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">view github</a>
+                            <a href="http://to-do-list-annaw-99s-projects.vercel.app" target="_blank" style="font-size: 8px;">view web app</a>&nbsp;| 
+                            HTML&nbsp;CSS&nbsp;JS&nbsp;Next.JS&nbsp;Vercel</p>
+                        <a href="https://github.com/annaw-99/to-do-list" target="_blank" style="font-size: 8px;">view github</a>
                     </div>
                 </div>
 
@@ -132,15 +148,13 @@
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
-                            &nbsp;&nbsp;&nbsp;T&nbsp;O-D&nbsp;O&nbsp;&nbsp;L&nbsp;I&nbsp;S&nbsp;T
+                            &nbsp;&nbsp;&nbsp;M&nbsp;O&nbsp;O&nbsp;D&nbsp;&nbsp;T&nbsp;R&nbsp;A&nbsp;C&nbsp;K&nbsp;E&nbsp;R
                         </h1>
                     </div>
                     <div class="sec">
-                        <p style="font-size: 8px;">a simple web to-do list.</p>
-                        <p class="hide" style="font-size: 8px;">
-                            <a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
-                            HTML&nbsp;CSS&nbsp;JS&nbsp;Next.JS&nbsp;Vercel</p>
-                        <a href="https://github.com/annaw-99/to-do-list" target="_blank" style="font-size: 8px;">view github</a>
+                        <p style="font-size: 8px;">a simple mood recorder.</p>
+                        <p class="hide" style="font-size: 8px;">Figma</p>
+                        <a href="docs/ux_research.pdf" target="_blank" style="font-size: 8px;">view ux research project</a>
                     </div>
                 </div>
 
