--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             
             <div class="mb-1 display-b">
                 <p>Little projects I made.&nbsp;</p>
-                <p>Scroll down to view more.</p>
+                <p style="font-weight: bold;">Scroll down</p>
+                <p>&nbsp;to view more.</p>
             </div>
             
             <div class="pt-3 scroll">
