--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <nav class="bottom-nav margin-two hide">
                 <ul style="display: flex; align-items: center;">
-                    <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
+                    <a class="no-dec" href="http://www.linkedin.com/in/tungyen-wang/" target="_blank" style="margin-right: 10px;">
                         <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
                     </a>
                     <a class="no-dec" href="https://github.com/annaw-99" target="_blank" style="margin-right: 10px;">
@@ -187,7 +187,7 @@
 
             <nav class="bottom-nav margin-two">
                 <ul style="display: flex; align-items: center;">
-                    <a class="no-dec" href="http://www.linkedin.com/in/anna-tungyen-wang-b3b250215" target="_blank" style="margin-right: 10px;">
+                    <a class="no-dec" href="http://www.linkedin.com/in/tungyen-wang/" target="_blank" style="margin-right: 10px;">
                         <img style="height: 1rem; filter: invert(75%);" src="public/images/linkedin.svg">
                     </a>
                     <a class="no-dec" href="https://github.com/annaw-99" target="_blank" style="margin-right: 10px;">
