modified github links

--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
                 Seeking Front-End and Software Developer opportunities for 2024.</p>
             </div>
 
-            <div class="mt-2 margin-one">
-                <p class="enter">View my resume <a href="#" style="font-size: 12px; font-weight: bold;">here</a>.</p>
-            </div>
             </div>
 
             <nav class="bottom-nav margin-two hide">
@@ -92,8 +89,7 @@
             
             <div class="mb-1 display-b">
                 <p>Little projects I made.&nbsp;</p>
-                <p style="font-weight: bold;">Scroll down</p>
-                <p>&nbsp;to view more.</p>
+                <p style="font-weight: bold;">Scroll down to view more.</p>
             </div>
             
             <div class="pt-3 scroll">
@@ -109,7 +105,7 @@
                         <p class="hide" style="font-size: 8px;">
                             <a href="#home" style="font-size: 8px;">view website</a>
                             &nbsp;| HTML&nbsp;CSS</p>
-                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">view github</a>
+                        <a href="https://github.com/annaw-99/web" target="_blank" style="font-size: 8px;">view github repo</a>
                     </div>
                 </div>
 
@@ -123,9 +119,9 @@
                     <div class="sec">
                         <p style="font-size: 8px;">a simple web calculator.</p>
                         <p class="hide" style="font-size: 8px;">
-                            <a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
+                            <a href="#" style="font-size: 8px;">view web app (disabled)</a>&nbsp;| 
                         HTML&nbsp;CSS&nbsp;JS&nbsp;Vue.JS</p>
-                        <a href="https://github.com/annaw-99/web-calculator" target="_blank" style="font-size: 8px;">view github</a>
+                        <a href="https://github.com/annaw-99/web-calculator" target="_blank" style="font-size: 8px;">view github repo</a>
                     </div>
                 </div>
 
@@ -141,7 +137,7 @@
                         <p class="hide" style="font-size: 8px;">
                             <a href="http://to-do-list-annaw-99s-projects.vercel.app" target="_blank" style="font-size: 8px;">view web app</a>&nbsp;| 
                             HTML&nbsp;CSS&nbsp;JS&nbsp;Next.JS&nbsp;Vercel</p>
-                        <a href="https://github.com/annaw-99/to-do-list" target="_blank" style="font-size: 8px;">view github</a>
+                        <a href="https://github.com/annaw-99/to-do-list" target="_blank" style="font-size: 8px;">view github repo</a>
                     </div>
                 </div>
 
@@ -156,22 +152,6 @@
                         <p style="font-size: 8px;">a simple mood recorder.</p>
                         <p class="hide" style="font-size: 8px;">Figma</p>
                         <a href="docs/ux_research.pdf" target="_blank" style="font-size: 8px;">view ux research project</a>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="first">
-                        <p>THE</p>
-                        <h1 style="font-weight: bold;">
-                            &nbsp;&nbsp;&nbsp;A&nbsp;N&nbsp;A&nbsp;L&nbsp;Y&nbsp;S&nbsp;T
-                        </h1>
-                    </div>
-                    <div class="sec">
-                        <p style="font-size: 8px;">a data analysis platform.</p>
-                        <p class="hide" style="font-size: 8px;">
-                            <a href="#" style="font-size: 8px;">view web app</a>&nbsp;| 
-                            HTML&nbsp;CSS&nbsp;JS</p>
-                        <a href="#" style="font-size: 8px;">view github (disabled)</a>
                     </div>
                 </div>
 
