--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
                     <div class="first">
                         <p>THE</p>
                         <h1 style="font-weight: bold;">
+                            &nbsp;&nbsp;&nbsp;C&nbsp;H&nbsp;A&nbsp;T&nbsp;B&nbsp;O&nbsp;T
+                        </h1>
+                    </div>
+                    <div class="sec">
+                        <p style="font-size: 8px;">a simple RAG chatbot.</p>
+                        <p class="hide" style="font-size: 8px;">
+                            no preview available&nbsp;| HTML&nbsp;CSS&nbsp;JS&nbsp;Vue.JS</p>
+                        <a href="https://github.com/annaw-99/RAG-chatbot" target="_blank" style="font-size: 8px;">view github repo</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="first">
+                        <p>THE</p>
+                        <h1 style="font-weight: bold;">
                             &nbsp;&nbsp;&nbsp;C&nbsp;A&nbsp;L&nbsp;C&nbsp;U&nbsp;L&nbsp;A&nbsp;T&nbsp;O&nbsp;R
                         </h1>
                     </div>
