--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="mt-2 margin-one">
                     <div style="display: flex; gap: 2rem;">
                         <div style="flex: 1;">
-                            <p style="margin-top: 1.2rem; font-size: 10px;">A recent graduate from Cornell University with a degree in Information Science. <br>
+                            <p class="large-text" style="margin-top: 1.2rem; font-size: 10px;">A recent graduate from Cornell University with a degree in Information Science. <br>
                             Actively seeking Software Engineering roles in the United States starting in 2025. <br>
                             Feel free to reach out — I'd love to connect!
                             </p>
@@ -114,8 +114,8 @@
                 </ul>
             </nav>
 
-            <div class="margin-one">
-                <p style="margin-top: 1.2rem; font-size: 10px;">
+            <div class="margin-one margin-left: 1rem; margin-right: 1rem;">
+                <p class="large-text" style="margin-top: 1.2rem; font-size: 10px;">
                     I am a passionate and driven software engineer with a strong interest in building <br>
                     scalable web applications, innovative tools, and user-centered designs. <br>
                     I thrive on solving complex problems and creating impactful solutions.
