added typing animation

--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
         </div>
     
         <div class="middle">
-            <h1 class="enter terminal-text" style="font-weight: bold;">
-            H&nbsp;&nbsp;&nbsp;E&nbsp;&nbsp;&nbsp;L&nbsp;&nbsp;&nbsp;L&nbsp;&nbsp;&nbsp;O
-            </h1>
-            <h1 class="hide">&nbsp;&nbsp;&nbsp;</h1>
-            <h1 class="enter terminal-text" style="font-weight: bold;">
-            T&nbsp;&nbsp;&nbsp;H&nbsp;&nbsp;&nbsp;E&nbsp;&nbsp;&nbsp;R&nbsp;&nbsp;&nbsp;E
+            <h1 class="typewriter terminal-text" style="font-weight: bold;">
+                hello world&nbsp;
             </h1>
         </div>
 
