added typing animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
         <div class="middle">
             <h1 class="typewriter terminal-text" style="font-weight: bold;">
-                hello world&nbsp;
+                hello world!
             </h1>
         </div>
 
