--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="terminal-content" style="width: 100%;">
             <pre style="margin: 0; height: 500px;"><code>
 <div>
-    <span style="color: black;">console.log("Feel free to reach out — I'd love to connect!")</span>
+    <span style="color: black;">console.log("Feel free to reach out—I'd love to connect!")</span>
 <span style="color: #4EC9B0;">>user@portfolio</span><span style="color: white;">:</span><span style="color: #569CD6;">~</span><span style="color: white;">$ cd about-me && cat info.json</span>
 <span class="blink-text">[Press Enter to continue...]</span></div><div id="hidden-content" style="display: none; margin-top: 1rem;" class="typing-effect">
 <span style="color: #6A9955"># Initializing Personal Information...</span>
@@ -76,7 +76,7 @@
 }
 
 <span style="color: #6A9955"># Ready to Connect...</span>
-<span style="color: #4EC9B0">console</span>.log(<span style="color: #CE9178">"Feel free to reach out — I'd love to connect!"</span>)</div>
+<span style="color: #4EC9B0">console</span>.log(<span style="color: #CE9178">"Feel free to reach out-I'd love to connect!"</span>)</div>
 </code></pre>
           </div>
         </div>
@@ -103,10 +103,10 @@
               </ul>
             </nav>
 
-            <div class="terminal-content" style="width: 100%;">
+            <div class="terminal-content centered-content" style="width: 100%;">
                 <pre style="margin: 0; height: 500px;"><code>
 <div>
-                <span style="color: #000000">"HTML/CSS", "Vue.js", "React.js", "Next.js", "Bootstrap"</nav></span>
+                <span style="color: #000000">"HTML/CSS", "Vue.js", "React.js", "Next.js"</nav></span>
 <span style="color: #4EC9B0;">>user@portfolio</span><span style="color: white;">:</span><span style="color: #569CD6;">~/skills</span><span style="color: white;">$ bat skills.json</span>
 <span class="p-hint">[Press S to view skills...]</span></div><div id="skills-content" style="display: none;" class="typing-effect">
 <span style="color: #6A9955"># Opening skills.json...</span>
@@ -120,7 +120,7 @@
         ],
         <span style="color: #9CDCFE">"webDevelopment"</span>: {
             <span style="color: #9CDCFE">"frontend"</span>: [
-                <span style="color: #CE9178">"HTML/CSS", "Vue.js", "React.js", "Next.js", "Bootstrap"</span>
+                <span style="color: #CE9178">"HTML/CSS", "Vue.js", "React.js", "Next.js"</span>
             ],
             <span style="color: #9CDCFE">"backend"</span>: [
                 <span style="color: #CE9178">"MongoDB", "API"</span>
@@ -157,10 +157,10 @@
                 <a href="#projects" class="terminal-link" style="text-decoration: underline; margin-right: 10px;">/ my-projects</a>
                 </ul>
             </nav>
-            <div class="terminal-content" style="width: 100%;">
+            <div class="terminal-content" style="width: 88%;">
                 <pre style="margin: 0; height: 500px;"><code>
 <div>
-    <span style="color: black;"> ┌─────────────────────────────────────────────────────────────┐</span>
+    <span style="color: black;"> ┌──────────────────────────────────────────────────────────┐</span>
 <span style="color: #4EC9B0;">>user@portfolio</span><span style="color: white;">:</span><span style="color: #569CD6;">~/projects</span><span style="color: white;">$ ./view-projects.sh</span>
 <span class="press-hint">[Press P to view projects...]</span></div>
 <div id="projects-content" style="display: none;" class="typing-effect">
@@ -170,20 +170,20 @@
 <span></span>
   <span class="tab-hat" data-project="1">┌──────────┐</span> <span class="tab-hat" data-project="2">┌──────────┐</span> <span class="tab-hat" data-project="3">┌──────────┐</span>
   <span class="project-tab" data-project="1" style="cursor: pointer;">│ project1 │</span> <span class="project-tab" data-project="2" style="cursor: pointer;">│ project2 │</span> <span class="project-tab" data-project="3" style="cursor: pointer;">│ project3 │</span><span class="project-tab" style="cursor: pointer;" onclick="window.open('https://github.com/annaw-99', '_blank');"> +++ </span>
-<span style="color: #666666">├─────────────────────────────────────────────────────────────┤</span>
-<span style="color: #666666">│</span>                                                             <span style="color: #666666">│</span>
-<span style="color: #666666">│</span>                                                             <span style="color: #666666">│</span>
-<span style="color: #666666">│</span>                                                             <span style="color: #666666">│</span>
-      <span style="font-size: 1.2rem;" class="project-title big-title"></span>
-      <span></span>
-      <span style="color: #CE9178" class="project-description"></span>
+<span style="color: #666666">├──────────────────────────────────────────────────────────┤</span>
+<span style="color: #666666">│</span>                                                          <span style="color: #666666">│</span>
+<span style="color: #666666">│</span>                                                          <span style="color: #666666">│</span>
+<span style="color: #666666">│</span>                                                          <span style="color: #666666">│</span>
+    <span style="font-size: 1.2rem;" class="project-title big-title"></span>
+    <span></span>
+    <span style="color: #CE9178" class="project-description"></span>
 
-      <span style="color: #00BFFF" class="project-tech"></span>
+    <span style="color: #00BFFF" class="project-tech"></span>
 
-      <span style="color: #00BFFF" class="project-links"></span>
+    <span style="color: #00BFFF" class="project-links"></span>
 <span style="color: #666666">│</span>
-<span style="color: #666666">│</span>                                                             <span style="color: #666666">│</span>
-<span style="color: #666666">└─────────────────────────────────────────────────────────────┘</span></div>
+<span style="color: #666666">│</span>                                                          <span style="color: #666666">│</span>
+<span style="color: #666666">└──────────────────────────────────────────────────────────┘</span></div>
 </code></pre>
             </div>
         </div>
