--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
           <div class="terminal-content" style="width: 100%;">
             <pre style="margin: 0; height: 500px;"><code>
 <div>
-    <span style="color: black;">console.log("Feel free to reach out—I'd love to connect!")</span>
-<span style="color: #4EC9B0;">>user@portfolio</span><span style="color: white;">:</span><span style="color: #569CD6;">~</span><span style="color: white;">$ cd about-me && cat info.json</span>
+    <span style="color: black;">seeking: ["Software Engineering", "Full-Stack Development"],</span>
+<span style="color: #4EC9B0;">>user@portfolio</span></span><span style="color: white;">$ cd about-me && cat info.json</span>
 <span class="blink-text">[Press Enter to continue...]</span></div><div id="hidden-content" style="display: none; margin-top: 1rem;" class="typing-effect">
 <span style="color: #6A9955"># Initializing Personal Information...</span>
 <span style="color: #4EC9B0">const</span> <span style="color: #9CDCFE">developer</span> = {
-    name: <span style="color: #CE9178">"Tung-Yen"</span>,
-    education: <span style="color: #CE9178">"Cornell University - Information Science"</span>,
+    name: <span style="color: #CE9178">"Tung-Yen (Anna) Wang<span class="wave">&nbsp;👋🏻</span>"</span>,
+    education: <span style="color: #CE9178">"Cornell University"</span>,
+    concentration: <span style="color: #CE9178">"Information Science"</span>,
     status: <span style="color: #CE9178">"Recent Graduate"</span>,
-    seeking: [<span style="color: #CE9178">"Web Development"</span>, <span style="color: #CE9178">"Software Engineering"</span>],
-    location: <span style="color: #CE9178">"United States"</span>
+    seeking: [<span style="color: #CE9178">"Software Engineering"</span>, <span style="color: #CE9178">"Full-Stack Development"</span>],
+    location: <span style="color: #CE9178">"New York, United States"</span>
 }
 
 <span style="color: #6A9955"># Establishing Connection...</span>
@@ -106,8 +107,8 @@
             <div class="terminal-content centered-content" style="width: 100%;">
                 <pre style="margin: 0; height: 500px;"><code>
 <div>
-                <span style="color: #000000">"HTML/CSS", "Vue.js", "React.js", "Next.js"</nav></span>
-<span style="color: #4EC9B0;">>user@portfolio</span><span style="color: white;">:</span><span style="color: #569CD6;">~/skills</span><span style="color: white;">$ bat skills.json</span>
+                <span style="color: #000000">"HTML/CSS", "Vue.js", "React.js", "Next.js"</span>
+<span style="color: #4EC9B0;">>user@portfolio</span></span><span style="color: white;">$ cd my-skills && cat skills.json</span>
 <span class="p-hint">[Press S to view skills...]</span></div><div id="skills-content" style="display: none;" class="typing-effect">
 <span style="color: #6A9955"># Opening skills.json...</span>
 {
@@ -161,7 +162,7 @@
                 <pre style="margin: 0; height: 500px;"><code>
 <div>
     <span style="color: black;"> ┌──────────────────────────────────────────────────────────┐</span>
-<span style="color: #4EC9B0;">>user@portfolio</span><span style="color: white;">:</span><span style="color: #569CD6;">~/projects</span><span style="color: white;">$ ./view-projects.sh</span>
+<span style="color: #4EC9B0;">>user@portfolio</span></span><span style="color: white;">$ ./view-projects.sh</span>
 <span class="press-hint">[Press P to view projects...]</span></div>
 <div id="projects-content" style="display: none;" class="typing-effect">
 <span style="color: #6A9955"># Creating Selected Projects...</span>
